fixed model logo alignment bug

--- a/portlets/proposals-portlet/src/main/webapp/css/simulation-both.css
+++ b/portlets/proposals-portlet/src/main/webapp/css/simulation-both.css
@@ -77,17 +77,19 @@ table.simulation .leftContent, table.simulation .right-content {
 
 a.model_name_description{
     display: block;
-    width: 50%;
 }
 .model_description .brand {
     cursor:pointer;
+    position: relative;
+    right: 0px;
+    top: 0px;
+    float: right;
 }
 
 .model_description .brand.EnROADS {
 	background: url(../img/climate_interactive_logo.png) no-repeat !important;
 	width: 150px;
 	height: 67px;
-	float: right;
 	margin-top: -50px;
 }
 
@@ -95,8 +97,4 @@ a.model_name_description{
 	background: url(../img/emf_logo.png) no-repeat !important;
 	width: 154px;
 	height: 50px;
-	float: right;
-	position: absolute;
-	right: 0px;
-	top: 0px;
 }
